# sentinelops

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
docs/: MILESTONES.md
infra/: docker-compose.yml
infra/k8s/: README.md
infra/k8s/base/: anomaly-rust.yaml  ingestion-go.yaml  kustomization.yaml  log-producer.yaml  namespace.yaml  redpanda.yaml  secret.example.yaml  timescaledb.yaml
infra/prometheus/: prometheus.yml
infra/sql/: 002_anomalies_table.sql
services/anomaly-rust/: Cargo.toml  Dockerfile
services/anomaly-rust/src/: config.rs  main.rs  metrics.rs
services/anomaly-rust/src/detector/: mod.rs
services/anomaly-rust/src/store/: mod.rs
services/dashboard-nextjs/: .dockerignore  Dockerfile  README.md  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
services/dashboard-nextjs/app/: globals.css  layout.tsx  page.tsx
services/dashboard-nextjs/components/: AnomalyFeed.tsx  QueryTerminal.tsx  ServiceHealthGrid.tsx  SeverityBadge.tsx  StatusPulse.tsx
services/dashboard-nextjs/lib/: db.ts  queryParams.test.ts  queryParams.ts  serviceHealth.test.ts  serviceHealth.ts  types.ts
services/dashboard-nextjs/public/: .gitkeep
services/ingestion-go/: .golangci.yml  Dockerfile  go.mod  go.sum
services/llm-query-python/: Dockerfile  requirements-dev.txt  requirements.txt
services/llm-query-python/app/: config.py  jobs.py  main.py  ollama_client.py  retrieval.py
services/llm-query-python/tests/: pyproject.toml  (+2 more)
services/log-producer/: Dockerfile  producer.py  pyproject.toml  requirements.txt
(+18 files in other folders)
